crates/regolith-syntax/tests/snapshots/snapshots__ast@crates_regolith-syntax_tests_fixtures_process_pack_cupr.snap
---
source: crates/regolith-syntax/tests/snapshots.rs
expression: "dump(Stage::Ast, &source, &file)"
---
Decl "process jlc_2l:"
