crates/regolith-syntax/tests/snapshots/snapshots__ast@crates_regolith-syntax_tests_fixtures_process_pack_hem.snap
---
source: crates/regolith-syntax/tests/snapshots.rs
expression: "dump(Stage::Ast, &source, &file)"
---
Decl "process press_brake_shop:"
