crates/regolith-syntax/tests/snapshots/snapshots__ast@examples_elec_buck_converter_cupr.snap
---
source: crates/regolith-syntax/tests/snapshots.rs
expression: "dump(Stage::Ast, &source, &file)"
---
Import "import std.elec.power (Inductor, Capacitor, ResistorDivider)\n"
Decl "block Buck:"
Decl "impl Buck by circuit:"
