crates/regolith-syntax/tests/snapshots/snapshots__cst@crates_regolith-syntax_tests_fixtures_process_pack_cupr.snap
---
source: crates/regolith-syntax/tests/snapshots.rs
expression: "dump(Stage::Cst, &source, &file)"
---
File@0..1241
  Comment@0..64 "# Representative elec ..."
  Newline@64..65 "\n"
  Comment@65..133 "# cuprite/04 sec. 4): ..."
  Newline@133..134 "\n"
  Comment@134..204 "# (aggregate over a q ..."
  Newline@204..205 "\n"
  Comment@205..275 "# cycle 18) and a rea ..."
  Newline@275..276 "\n"
  Comment@276..345 "# golden corpus is a  ..."
  Newline@345..346 "\n"
  Newline@346..347 "\n"
  Decl@347..1241
    Ident@347..354 "process"
    Whitespace@354..355 " "
    Ident@355..361 "jlc_2l"
    Colon@361..362 ":"
    Newline@362..363 "\n"
    Whitespace@363..367 "    "
    Indent@367..367 ""
    CapabilityBlock@367..461
      Ident@367..377 "capability"
      Colon@377..378 ":"
      Newline@378..379 "\n"
      Whitespace@379..387 "        "
      Indent@387..387 ""
      Field@387..405
        Ident@387..396 "min_trace"
        Colon@396..397 ":"
        Whitespace@397..398 " "
        QuantityLit@398..404
          Number@398..402 "0.09"
          Ident@402..404 "mm"
        Newline@404..405 "\n"
      Whitespace@405..413 "        "
      Field@413..431
        Ident@413..422 "min_space"
        Colon@422..423 ":"
        Whitespace@423..424 " "
        QuantityLit@424..430
          Number@424..428 "0.09"
          Ident@428..430 "mm"
        Newline@430..431 "\n"
      Whitespace@431..439 "        "
      Field@439..456
        Ident@439..448 "min_drill"
        Colon@448..449 ":"
        Whitespace@449..450 " "
        QuantityLit@450..455
          Number@450..453 "0.2"
          Ident@453..455 "mm"
        Newline@455..456 "\n"
      Newline@456..457 "\n"
      Whitespace@457..461 "    "
      Dedent@461..461 ""
    RulePackBlock@461..873
      Ident@461..464 "erc"
      Colon@464..465 ":"
      Newline@465..466 "\n"
      Whitespace@466..474 "        "
      Indent@474..474 ""
      RuleDecl@474..873
        Ident@474..478 "rule"
        Whitespace@478..479 " "
        Ident@479..491 "fanout_drive"
        Colon@491..492 ":"
        Newline@492..493 "\n"
        Whitespace@493..505 "            "
        Indent@505..505 ""
        ForallClause@505..541
          Ident@505..511 "forall"
          Whitespace@511..512 " "
          Ident@512..513 "n"
          Whitespace@513..514 " "
          InKw@514..516 "in"
          Whitespace@516..517 " "
          CallExpr@517..540
            Path@517..527
              Ident@517..521 "nets"
              Dot@521..522 "."
              Ident@522..527 "where"
            ArgList@527..540
              LParen@527..528 "("
              BinExpr@528..539
                NameRef@528..532
                  Ident@528..532 "kind"
                Eq@532..533 "="
                NameRef@533..539
                  Ident@533..539 "signal"
              RParen@539..540 ")"
          Newline@540..541 "\n"
        Whitespace@541..553 "            "
        Field@553..602
          Ident@553..559 "demand"
          Colon@559..560 ":"
          Whitespace@560..561 " "
          BinExpr@561..601
            CallExpr@561..581
              NameRef@561..564
                Ident@561..564 "sum"
              ArgList@564..581
                LParen@564..565 "("
                Path@565..580
                  Ident@565..566 "n"
                  Dot@566..567 "."
                  Ident@567..572 "loads"
                  Dot@572..573 "."
                  Ident@573..580 "i_input"
                RParen@580..581 ")"
            Whitespace@581..582 " "
            LtEq@582..584 "<="
            Whitespace@584..585 " "
            Path@585..601
              Ident@585..586 "n"
              Dot@586..587 "."
              Ident@587..593 "driver"
              Dot@593..594 "."
              Ident@594..601 "i_drive"
          Newline@601..602 "\n"
        Whitespace@602..614 "            "
        Field@614..649
          Ident@614..617 "per"
          Colon@617..618 ":"
          Whitespace@618..619 " "
          String@619..648 "\"family drive spec, c ..."
          Newline@648..649 "\n"
        Whitespace@649..661 "            "
        Field@661..721
          Ident@661..664 "why"
          Colon@664..665 ":"
          Whitespace@665..666 " "
          String@666..720 "\"aggregate input curr ..."
          Newline@720..721 "\n"
        Whitespace@721..733 "            "
        ExpectBlock@733..873
          Ident@733..739 "expect"
          Colon@739..740 ":"
          Newline@740..741 "\n"
          Whitespace@741..757 "                "
          Indent@757..757 ""
          ExpectCase@757..804
            Ident@757..761 "pass"
            Colon@761..762 ":"
            Whitespace@762..763 " "
            CallExpr@763..803
              NameRef@763..766
                Ident@763..766 "net"
              ArgList@766..803
                LParen@766..767 "("
                BinExpr@767..778
                  NameRef@767..771
                    Ident@767..771 "kind"
                  Eq@771..772 "="
                  NameRef@772..778
                    Ident@772..778 "signal"
                Comma@778..779 ","
                Whitespace@779..780 " "
                BinExpr@780..791
                  NameRef@780..787
                    Ident@780..787 "loads_i"
                  Eq@787..788 "="
                  QuantityLit@788..791
                    Number@788..789 "2"
                    Ident@789..791 "mA"
                Comma@791..792 ","
                Whitespace@792..793 " "
                BinExpr@793..802
                  NameRef@793..798
                    Ident@793..798 "drive"
                  Eq@798..799 "="
                  QuantityLit@799..802
                    Number@799..800 "8"
                    Ident@800..802 "mA"
                RParen@802..803 ")"
            Newline@803..804 "\n"
          Whitespace@804..820 "                "
          ExpectCase@820..868
            Ident@820..824 "fail"
            Colon@824..825 ":"
            Whitespace@825..826 " "
            CallExpr@826..867
              NameRef@826..829
                Ident@826..829 "net"
              ArgList@829..867
                LParen@829..830 "("
                BinExpr@830..841
                  NameRef@830..834
                    Ident@830..834 "kind"
                  Eq@834..835 "="
                  NameRef@835..841
                    Ident@835..841 "signal"
                Comma@841..842 ","
                Whitespace@842..843 " "
                BinExpr@843..855
                  NameRef@843..850
                    Ident@843..850 "loads_i"
                  Eq@850..851 "="
                  QuantityLit@851..855
                    Number@851..853 "12"
                    Ident@853..855 "mA"
                Comma@855..856 ","
                Whitespace@856..857 " "
                BinExpr@857..866
                  NameRef@857..862
                    Ident@857..862 "drive"
                  Eq@862..863 "="
                  QuantityLit@863..866
                    Number@863..864 "8"
                    Ident@864..866 "mA"
                RParen@866..867 ")"
            Newline@867..868 "\n"
          Newline@868..869 "\n"
          Whitespace@869..873 "    "
          Dedent@873..873 ""
        Dedent@873..873 ""
      Dedent@873..873 ""
    RulePackBlock@873..1241
      Ident@873..876 "drc"
      Colon@876..877 ":"
      Newline@877..878 "\n"
      Whitespace@878..886 "        "
      Indent@886..886 ""
      RuleDecl@886..1241
        Ident@886..890 "rule"
        Whitespace@890..891 " "
        Ident@891..907 "bus_length_match"
        Colon@907..908 ":"
        Newline@908..909 "\n"
        Whitespace@909..921 "            "
        Indent@921..921 ""
        ForallClause@921..954
          Ident@921..927 "forall"
          Whitespace@927..928 " "
          Ident@928..929 "b"
          Whitespace@929..930 " "
          InKw@930..932 "in"
          Whitespace@932..933 " "
          CallExpr@933..953
            Path@933..944
              Ident@933..938 "buses"
              Dot@938..939 "."
              Ident@939..944 "where"
            ArgList@944..953
              LParen@944..945 "("
              NameRef@945..952
                Ident@945..952 "matched"
              RParen@952..953 ")"
          Newline@953..954 "\n"
        Whitespace@954..966 "            "
        Field@966..1006
          Ident@966..972 "demand"
          Colon@972..973 ":"
          Whitespace@973..974 " "
          CallExpr@974..990
            NameRef@974..980
              Ident@974..980 "spread"
            ArgList@980..990
              LParen@980..981 "("
              CallExpr@981..990
                NameRef@981..987
                  Ident@981..987 "routes"
                ArgList@987..990
                  LParen@987..988 "("
                  NameRef@988..989
                    Ident@988..989 "b"
                  RParen@989..990 ")"
          OpaqueIsland@990..1005
            Dot@990..991 "."
            Ident@991..997 "length"
            RParen@997..998 ")"
            Whitespace@998..999 " "
            LtEq@999..1001 "<="
            Whitespace@1001..1002 " "
            Number@1002..1003 "2"
            Ident@1003..1005 "mm"
          Newline@1005..1006 "\n"
        Whitespace@1006..1018 "            "
        Field@1018..1055
          Ident@1018..1021 "per"
          Colon@1021..1022 ":"
          Whitespace@1022..1023 " "
          String@1023..1054 "\"IPC-2141A, matched g ..."
          Newline@1054..1055 "\n"
        Whitespace@1055..1067 "            "
        Field@1067..1111
          Ident@1067..1070 "why"
          Colon@1070..1071 ":"
          Whitespace@1071..1072 " "
          String@1072..1110 "\"length spread eats t ..."
          Newline@1110..1111 "\n"
        Whitespace@1111..1123 "            "
        ExpectBlock@1123..1241
          Ident@1123..1129 "expect"
          Colon@1129..1130 ":"
          Newline@1130..1131 "\n"
          Whitespace@1131..1147 "                "
          Indent@1147..1147 ""
          ExpectCase@1147..1187
            Ident@1147..1151 "pass"
            Colon@1151..1152 ":"
            Whitespace@1152..1153 " "
            CallExpr@1153..1186
              NameRef@1153..1156
                Ident@1153..1156 "bus"
              ArgList@1156..1186
                LParen@1156..1157 "("
                NameRef@1157..1164
                  Ident@1157..1164 "matched"
                Comma@1164..1165 ","
                Whitespace@1165..1166 " "
                BinExpr@1166..1185
                  NameRef@1166..1179
                    Ident@1166..1179 "length_spread"
                  Eq@1179..1180 "="
                  QuantityLit@1180..1185
                    Number@1180..1183 "0.8"
                    Ident@1183..1185 "mm"
                RParen@1185..1186 ")"
            Newline@1186..1187 "\n"
          Whitespace@1187..1203 "                "
          ExpectCase@1203..1241
            Ident@1203..1207 "fail"
            Colon@1207..1208 ":"
            Whitespace@1208..1209 " "
            CallExpr@1209..1240
              NameRef@1209..1212
                Ident@1209..1212 "bus"
              ArgList@1212..1240
                LParen@1212..1213 "("
                NameRef@1213..1220
                  Ident@1213..1220 "matched"
                Comma@1220..1221 ","
                Whitespace@1221..1222 " "
                BinExpr@1222..1239
                  NameRef@1222..1235
                    Ident@1222..1235 "length_spread"
                  Eq@1235..1236 "="
                  QuantityLit@1236..1239
                    Number@1236..1237 "5"
                    Ident@1237..1239 "mm"
                RParen@1239..1240 ")"
            Newline@1240..1241 "\n"
          Dedent@1241..1241 ""
        Dedent@1241..1241 ""
      Dedent@1241..1241 ""
    Dedent@1241..1241 ""
